--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "yarn code:check && react-scripts start",
+    "build": "yarn code:check && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "code:check": "yarn code:lint && yarn code:format --check",
+    "code:clean": "yarn code:lint --fix && yarn code:format --write",
+    "code:lint": "eslint --ext .js,.jsx,.ts,.tsx \"src/\"",
+    "code:format": "prettier \"./src/**/**.{js,jsx,ts,tsx}\"",
+    "code:check:rules": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "poetic": "^1.5.0"
   }
 }
