--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "react": "^16.13.1",
+    "react-autosize-textarea": "^7.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
